# browser-agent

./: .dockerignore  .gitignore  AGENTS.md  README.md  README.zh-CN.md  dev-start
gateway/: .env.example  pyproject.toml
gateway/app/: config.py  main.py  models.py  render.py
gateway/app/agents/: base.py  job_match.py  model_router.py  simple.py  stream.py  summary_page.py
gateway/app/agents/job_match/: README.md  __init__.py  agent.py  context.py  intent_router.py  legacy.py  planner.py  quick_insight.py  (+1 more)
gateway/app/core/: __init__.py  db.py  session.py  sql_types.py
gateway/app/storage/: tasks.py
gateway/tests/: test_agent_stream.py  test_auth_api.py  test_auth_logout.py  test_extension_token_api.py  test_extension_token_repo.py  test_extension_token_service.py  test_identity.py  test_job_match.py  test_job_match_intent_router.py  test_job_match_orchestrator.py  test_job_match_planner.py  test_job_match_router.py  test_job_match_service.py  test_job_match_specialists.py  test_language.py  test_render.py  test_resume_repo.py  test_routing.py  test_simple_agent.py  test_summary_page.py  test_task_debug_store.py  test_task_input_caps.py  test_task_legacy_api.py  test_task_protocol.py  test_task_rate_limit.py  test_task_repo.py  test_task_router.py  test_task_schema.py  test_task_service.py  test_task_v2_api.py  test_task_v2_schema.py  test_task_v2_service.py  test_task_workspace_api.py  test_task_workspace_schema.py  test_task_workspace_service.py  test_task_workspace_stream_schema.py  test_tasks_api.py  test_tasks_auth.py  test_workspace_stream_deployment.py
(+132 files in other folders)
