[project]
name = "agent-bridge-gateway"
version = "0.1.0"
description = "Local gateway for sending browser context to a built-in OpenAI-compatible agent."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "pydantic>=2.7.0",
  "uvicorn>=0.30.0",
  "openai>=1.40.0",
  "python-dotenv>=1.0.0",
  "markdown>=3.6",
  "nh3>=0.2.18",
  "pypdf>=4.0",
  "sqlalchemy>=2.0.30",
  "httpx>=0.27.0",
  "alibabacloud-oss-v2>=1.3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
]
# PostgreSQL 部署；默认 SQLite 时无需安装。
postgres = [
  "psycopg[binary]>=3.1",
  "psycopg-pool>=3.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
